feat: move wallet item options to a dropdown menu

--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -9,6 +9,7 @@
   "actionAddAccount": "Add account",
   "actionCreate": "Create",
   "actionDelete": "Delete",
+  "actionDeleteWallet": "Delete wallet",
   "actionDerive": "Derive",
   "actionEdit": "Edit",
   "actionEditWallet": "Edit wallet",
@@ -17,6 +18,7 @@
   "actionImport": "Import",
   "actionSave": "Save",
   "actionWatch": "Watch",
+  "exportMnemonic": "Export mnemonic",
   "exportMnemonicCopy": "Copy mnemonic",
   "exportMnemonicCopyConfirmDescription": "Do you want to copy it to your clipboard?",
   "exportMnemonicCopyConfirmTitle": "Exporting the mnemonic reveals sensitive information.",
@@ -81,6 +83,8 @@
   "walletCreateHeaderSeed": "Seed phrases",
   "walletCreateImportDescription": "Import an existing seed phrase and discover accounts",
   "walletCreateImportTitle": "Import an existing wallet",
+  "walletDeleteDescription": "This action cannot be undone.",
+  "walletDeleteTitle": "Are you sure you want to delete this wallet?",
   "walletInputColorDescription": "Select the color for this wallet",
   "walletInputColorLabel": "Color",
   "walletInputDerivationPathDescription": "Provide the derivation path of the wallet",
