--- a/packages/i18n/locales/es/settings.json
+++ b/packages/i18n/locales/es/settings.json
@@ -9,6 +9,7 @@
   "actionAddAccount": "Agregar cuenta",
   "actionCreate": "Crear",
   "actionDelete": "Eliminar",
+  "actionDeleteWallet": "Eliminar billetera",
   "actionDerive": "Derivar",
   "actionEdit": "Editar",
   "actionEditWallet": "Editar billetera",
@@ -17,6 +18,7 @@
   "actionImport": "Importar",
   "actionSave": "Guardar",
   "actionWatch": "Observar",
+  "exportMnemonic": "Exportar mnemónica",
   "exportMnemonicCopy": "Copiar mnemónica",
   "exportMnemonicCopyConfirmDescription": "¿Desea copiarla en el portapapeles?",
   "exportMnemonicCopyConfirmTitle": "Al exportar la mnemónica se revela información confidencial.",
@@ -81,6 +83,8 @@
   "walletCreateHeaderSeed": "Frase semilla",
   "walletCreateImportDescription": "Importar una frase semilla existente y descubrir cuentas",
   "walletCreateImportTitle": "Importar una billetera existente",
+  "walletDeleteDescription": "Esta acción no se puede deshacer",
+  "walletDeleteTitle": "¿Estás seguro que quieres eliminar esta billetera?",
   "walletInputColorDescription": null,
   "walletInputColorLabel": null,
   "walletInputDerivationPathDescription": "Proporcione la ruta de derivación de la billetera.",
