feat(explorer): show detailed account info based on account type

--- a/packages/i18n/locales/en/explorer.json
+++ b/packages/i18n/locales/en/explorer.json
@@ -20,13 +20,14 @@
   "bookmarkTransactionDescription": "List of transactions you bookmarked",
   "bookmarkTransactionEmpty": "You have no transaction bookmarks yet.",
   "bookmarkTransactionTitle": "Transaction bookmarks",
+  "debug": "Debug",
   "editLabel": "Edit label",
   "inputSearchPlaceholder": "Search account or transaction",
   "label": "Label",
   "labelEmpty": "None",
   "labelInputPlaceholder": "Enter a label",
-  "lamports": "lamports",
-  "owner": "owner",
+  "lamports": "Lamports",
+  "owner": "Owner",
   "pageExplorerDescription": "Search and explore accounts or transactions",
   "pageExplorerTitle": "Explorer",
   "signature": "Signature",
