--- a/packages/i18n/locales/en/explorer.json
+++ b/packages/i18n/locales/en/explorer.json
@@ -25,8 +25,8 @@
   "label": "Label",
   "labelEmpty": "None",
   "labelInputPlaceholder": "Enter a label",
-  "lamports": "lamports",
-  "owner": "owner",
+  "lamports": "Lamports",
+  "owner": "Owner",
   "pageExplorerDescription": "Search and explore accounts or transactions",
   "pageExplorerTitle": "Explorer",
   "signature": "Signature",
