feat(explorer): show detailed account info based on account type

--- a/packages/i18n/locales/en/explorer.json
+++ b/packages/i18n/locales/en/explorer.json
@@ -35,7 +35,7 @@
   "label": "Label",
   "labelEmpty": "None",
   "labelInputPlaceholder": "Enter a label",
-  "lamports": "lamports",
+  "lamports": "Lamports",
   "mint": "Mint",
   "owner": "Owner",
   "pageExplorerDescription": "Search and explore accounts or transactions",
