feat(settings): improve ux of accounts list

--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -1,14 +1,13 @@
 {
-  "accountTableHeaderActions": "Actions",
-  "accountTableHeaderName": "Name",
-  "accountTableHeaderPublicKey": "Public key",
-  "accountTableHeaderType": "Type",
+  "accountDeleteDescription": "This action cannot be undone.",
+  "accountDeleteTitle": "Are you sure you want to delete this account?",
   "accountTypeDerived": "Derived",
   "accountTypeImported": "Imported",
   "accountTypeWatched": "Watched",
   "actionAddAccount": "Add account",
   "actionCreate": "Create",
   "actionDelete": "Delete",
+  "actionDeleteAccount": "Delete account",
   "actionDeleteWallet": "Delete wallet",
   "actionDerive": "Derive",
   "actionEdit": "Edit",
@@ -17,6 +16,7 @@
   "actionGenerate": "Generate",
   "actionImport": "Import",
   "actionSave": "Save",
+  "actionViewAccount": "View account",
   "actionWatch": "Watch",
   "exportMnemonic": "Export mnemonic",
   "exportMnemonicCopy": "Copy mnemonic",
@@ -26,6 +26,7 @@
   "exportMnemonicHide": "Hide mnemonic",
   "exportMnemonicReveal": "Reveal mnemonic",
   "exportMnemonicShow": "Show mnemonic",
+  "exportSecretKey": "Export secret key",
   "exportSecretKeyCopy": "Copy secret key",
   "exportSecretKeyCopyConfirmDescription": "Do you want to copy it to your clipboard?",
   "exportSecretKeyCopyConfirmTitle": "Exporting the secret key reveals sensitive information.",
