--- a/packages/i18n/locales/es/settings.json
+++ b/packages/i18n/locales/es/settings.json
@@ -1,14 +1,13 @@
 {
-  "accountTableHeaderActions": "Acciones",
-  "accountTableHeaderName": "Nombre",
-  "accountTableHeaderPublicKey": "Clave pública",
-  "accountTableHeaderType": "Tipo",
+  "accountDeleteDescription": null,
+  "accountDeleteTitle": null,
   "accountTypeDerived": "Derivado",
   "accountTypeImported": "Importado",
   "accountTypeWatched": "Visto",
   "actionAddAccount": "Agregar cuenta",
   "actionCreate": "Crear",
   "actionDelete": "Eliminar",
+  "actionDeleteAccount": null,
   "actionDeleteWallet": "Eliminar billetera",
   "actionDerive": "Derivar",
   "actionEdit": "Editar",
@@ -17,6 +16,7 @@
   "actionGenerate": "Generar",
   "actionImport": "Importar",
   "actionSave": "Guardar",
+  "actionViewAccount": null,
   "actionWatch": "Observar",
   "exportMnemonic": "Exportar mnemónica",
   "exportMnemonicCopy": "Copiar mnemónica",
@@ -26,6 +26,7 @@
   "exportMnemonicHide": "Ocultar mnemónica",
   "exportMnemonicReveal": "Revelar mnemónica",
   "exportMnemonicShow": "Mostrar mnemónica",
+  "exportSecretKey": null,
   "exportSecretKeyCopy": "Copiar clave secreta",
   "exportSecretKeyCopyConfirmDescription": "¿Desea copiarla en el portapapeles?",
   "exportSecretKeyCopyConfirmTitle": "Al exportar la clave secreta se revela información confidencial.",
