feat(explorer): add request airdrop component to account not-found screen

--- a/packages/i18n/locales/en/explorer.json
+++ b/packages/i18n/locales/en/explorer.json
@@ -3,9 +3,11 @@
   "actionDelete": "Delete",
   "actionManage": "Manage",
   "actionRefresh": "Refresh",
+  "actionRequestAirdrop": "Request airdrop",
   "actionSearch": "Search",
   "actions": "Actions",
   "actionUpdate": "Update",
+  "actionUseFaucet": "Use faucet",
   "address": "Address",
   "bookmarkAccountDescription": "List of accounts you bookmarked",
   "bookmarkAccountEmpty": "You have no account bookmarks yet.",
@@ -29,6 +31,8 @@
   "owner": "Owner",
   "pageExplorerDescription": "Search and explore accounts or transactions",
   "pageExplorerTitle": "Explorer",
+  "requestAirdropDescription": "Request your airdrop to get started.",
+  "requestAirdropTitle": "Request Airdrop",
   "signature": "Signature",
   "transactionsOverviewDescription": "Recent transactions for this account",
   "transactionsOverviewTitle": "Account transactions"
