--- a/packages/i18n/locales/es/explorer.json
+++ b/packages/i18n/locales/es/explorer.json
@@ -3,9 +3,11 @@
   "actionDelete": "Eliminar",
   "actionManage": "Gestionar",
   "actionRefresh": "Actualizar",
+  "actionRequestAirdrop": "Solicitar airdrop",
   "actionSearch": "Buscar",
   "actions": "Acciones",
   "actionUpdate": "Actualizar",
+  "actionUseFaucet": "Usa faucet",
   "address": "Dirección",
   "bookmarkAccountDescription": "Lista de cuentas etiquetadas",
   "bookmarkAccountEmpty": "Aún no tienes cuentas etiquetadas",
@@ -29,6 +31,8 @@
   "owner": "Propietario",
   "pageExplorerDescription": "Buscar y explorar cuentas o transacciones",
   "pageExplorerTitle": "Explorador",
+  "requestAirdropDescription": "Solicita tu airdrop para empezar.",
+  "requestAirdropTitle": "Solicitar airdrop",
   "signature": "Firma",
   "transactionsOverviewDescription": "Transacciones recientes de esta cuenta",
   "transactionsOverviewTitle": "Transacciones de la cuenta"
