feat(settings): add Request Airdrop menu option to account list

--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -15,6 +15,7 @@
   "actionEditWalletMessage": "Add account to this wallet",
   "actionGenerate": "Generate",
   "actionImport": "Import",
+  "actionRequestAirdrop": "Request airdrop",
   "actionSave": "Save",
   "actionViewAccount": "View account",
   "actionWatch": "Watch",
