--- a/packages/i18n/locales/en/explorer.json
+++ b/packages/i18n/locales/en/explorer.json
@@ -26,6 +26,8 @@
   "bookmarkTransactionDescription": "List of transactions you bookmarked",
   "bookmarkTransactionEmpty": "You have no transaction bookmarks yet.",
   "bookmarkTransactionTitle": "Transaction bookmarks",
+  "change": "Change",
+  "details": "Details",
   "editLabel": "Edit label",
   "inputSearchPlaceholder": "Search account or transaction",
   "label": "Label",
@@ -36,5 +38,6 @@
   "owner": "Owner",
   "pageExplorerDescription": "Search and explore accounts or transactions",
   "pageExplorerTitle": "Explorer",
+  "postBalance": "Post balance",
   "signature": "Signature"
 }
