feat(explorer): add token balances to transaction detail screen

--- a/packages/i18n/locales/en/explorer.json
+++ b/packages/i18n/locales/en/explorer.json
@@ -39,5 +39,6 @@
   "pageExplorerDescription": "Search and explore accounts or transactions",
   "pageExplorerTitle": "Explorer",
   "postBalance": "Post balance",
-  "signature": "Signature"
+  "signature": "Signature",
+  "token": "Token"
 }
