--- a/packages/i18n/locales/es/explorer.json
+++ b/packages/i18n/locales/es/explorer.json
@@ -39,5 +39,6 @@
   "pageExplorerDescription": "Buscar y explorar cuentas o transacciones",
   "pageExplorerTitle": "Explorador",
   "postBalance": "Saldo posterior",
-  "signature": "Firma"
+  "signature": "Firma",
+  "token": "Tokens"
 }
