feat(settings): add wallet menu options to update wallet order

--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -15,6 +15,8 @@
   "actionEditWalletMessage": "Add account to this wallet",
   "actionGenerate": "Generate",
   "actionImport": "Import",
+  "actionMoveWalletDown": "Move down",
+  "actionMoveWalletUp": "Move up",
   "actionRequestAirdrop": "Request airdrop",
   "actionSave": "Save",
   "actionViewAccount": "View account",
