feat(settings): add menu options to update Account order

--- a/packages/i18n/locales/en/settings.json
+++ b/packages/i18n/locales/en/settings.json
@@ -15,6 +15,8 @@
   "actionEditWalletMessage": "Add account to this wallet",
   "actionGenerate": "Generate",
   "actionImport": "Import",
+  "actionMoveAccountDown": "Move down",
+  "actionMoveAccountUp": "Move up",
   "actionMoveWalletDown": "Move down",
   "actionMoveWalletUp": "Move up",
   "actionRequestAirdrop": "Request airdrop",
